--- a/tablesearch/search.html
+++ b/tablesearch/search.html
@@ -1,5 +1,5 @@
 <html>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
 <div id="users">
   <input class="search" placeholder="Search" />
   <button class="sort" data-sort="name">
