--- a/tablesearch/search.html
+++ b/tablesearch/search.html
@@ -1,6 +1,10 @@
 <html>
+  <head>
+     <link rel="stylesheet" type="text/css" href="search.css">
+  </head>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/1.2.0/list.min.js"></script>
-<div id="users">
+  <script type="text/javascript" src="search.js"></script>
+  <div id="users">
   <input class="search" placeholder="Search" />
   <button class="sort" data-sort="name">
     Sort by name
