--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -23,8 +23,8 @@ pre{ font-size:13px; margin:5px; padding:5px; background-color:#f4f4f4; border:1
 	width:100%; font-size:12px;
 	border:1px solid #ccc;
 }
-th{ background-color:#003366; color:#FFF; padding:2px; border:1px solid #ccc; }
-td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; }
+th{ background-color:#003366; color:#FFF; padding:2px; border:1px solid #ccc;font-size:38%;  }
+td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc;font-size:30%;  }
 </style>
 <script language="javascript" type="text/javascript" src="tablefilter.js"></script>
 </head>
