--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -36,22 +36,18 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td colspan="7"><strong>This is the table caption </strong></td>
   </tr>
   <tr> 
-    <th width="1%">&nbsp;</th>
-    <th width="15%"><strong>From</strong></th>
-    <th width="15%"><strong>Destination</strong></th>
-    <th><strong>Road Distance (km)</strong></th>
-    <th><strong>By Air (hrs)</strong></th>
-    <th><strong>By Car/Coach (hrs)</strong></th>
-    <th><strong>By Rail (hrs)</strong></th>
+   
+    <th width="15%"><strong>Company</strong></th>
+    <th width="15%"><strong>Deadline</strong></th>
+    <th width="15%"><strong>Notes</strong></th>
+
   </tr>
   <tr> 
-    <td>1.</td>
-    <td><strong>Sydney</strong></td>
-    <td>Adelaide</td>
-    <td>1412</td>
-    <td>1.4</td>
-    <td>24</td>
-    <td>25.3</td>
+    
+	  <td> <a href="http://jobs.bostonglobe.com"> Boston Globe </a></td>
+    <td>Oct 22 2016</td>
+    <td>Summer Internship Program: Sports, Living/Arts, Health/Science,  Business, Photography and Editorial Design departments. </td>
+  
   </tr>
   <tr> 
     <td>2.</td>
