--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -148,6 +148,14 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Winter Internship</td>
    
   </tr>
+	
+	<tr> 
+ 
+	  <td><a href="http://www.chicagomag.com/Chicago-Magazine/Contact-Us/Careers-at-Chicago-Magazine/"> Chicago Magazine</a></td>
+    <td>Nov 1 2016</td>
+    <td>Editorial Winter Internship</td>
+   
+  </tr>
 <tr> 
  
 	  <td><a href="http://www.nytco.com/careers/student-journalism-institute/student-journalism-institute/"> NYT Student Institute </a></td>
