--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -106,6 +106,13 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Summer Internship</td>
    
   </tr>
+	<tr> 
+   
+    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/newsroom-summer-internships/#1"> The New York Times James Reston Reporting Fellowships</a></td>
+    <td>Oct 31 2016</td>
+    <td>Interns are assigned to various news departments, typically Metro, Business, Sports or Science or the Washington bureau.</td>
+   
+  </tr>
   <tr> 
     
     <td><a href="http://www.npr.org/about-npr/181881227/want-to-be-an-npr-intern"> NPR</a></td>
