--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -153,6 +153,20 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
 	
 	<tr> 
  
+	  <td><a href="http://www.smithsonianmag.com/about/internships-employment/?no-ist="> Smithsonian Magazine</a></td>
+    <td>Nov 15 2016</td>
+    <td>Summer Internship</td>
+   
+  </tr>
+	<tr> 
+ 
+	  <td><a href="http://sportsjournalisminstitute.org/summer-program/"> Sports Journalism Institute </a></td>
+    <td>Nov 2 2016</td>
+    <td>Summer Program</td>
+   
+  </tr>
+	<tr> 
+ 
 	  <td><a href="http://www.chicagomag.com/Chicago-Magazine/Contact-Us/Careers-at-Chicago-Magazine/"> Chicago Magazine</a></td>
     <td>Nov 1 2016</td>
     <td>Editorial Winter Internship</td>
