--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -222,13 +222,6 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
    
   </tr>	
 	
-	<tr> 
- 
-	  <td><a href="http://www.mcgrawcenter.org/the-harold-w-mcgraw-jr-business-journalism-fellowships/"> The McGraw Center for Business Journalism </a></td>
-    <td>May 31 2017</td>
-    <td>Spring Internship</td>
-   
-  </tr>	
 	
 <tr> 
  
@@ -281,6 +274,14 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Summer news internship, Photo internship </td>
 		
   </tr>	
+	
+	<tr> 
+ 
+	  <td><a href="http://thomsonreuters.com/en/careers/recent-graduates-interns/recent-graduates-business-finance.html">Reuters Global Journalism Fellowship</a></td>
+    <td>Nov 15 2016</td>
+    <td>Opportunities in New York, London, Asia </td>
+		
+  </tr>	
 <tr> 
  
 	  <td><a href="http://www.orlandosentinel.com/orl-internships-story.html">Orlando Sun-Sentinel</a></td>
@@ -317,12 +318,35 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Journalism Fellowship </td>
 		
   </tr>
+	
+	<tr> 
+ 
+	  <td><a href="http://www.newsday.com/services/internships-1.6183232"> Newsday</a></td>
+    <td>Dec 5 2016</td>
+    <td>Summer Internhip </td>
+		
+  </tr>
 	<tr> 
  
 	  <td><a href="https://apsa.wufoo.com/forms/apsa-congressional-fellowship-journalism/"> American Political Science Association</a></td>
     <td>Dec 5 2016</td>
     <td> Nine month fellowship</td>
 		
+  </tr>	
+	<tr> 
+ 
+	  <td><a href="http://www.ocregister.com/sections/about/careers/internships/"> Orange County Register</a></td>
+    <td>Dec 23 2016</td>
+    <td>Summer internship </td>
+		
+  </tr>
+	
+	<tr> 
+ 
+	  <td><a href="http://www.mcgrawcenter.org/the-harold-w-mcgraw-jr-business-journalism-fellowships/"> The McGraw Center for Business Journalism </a></td>
+    <td>May 31 2017</td>
+    <td>Spring Internship</td>
+   
   </tr>	
 	
 	<tr> 
