--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -311,6 +311,14 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>15 Scholarship Awards  </td>
 		
   </tr>	
+	
+	<tr> 
+ 
+	  <td><a href="http://www.magazine.org/asme/internship-program"> American Society of Magazine Editors</a></td>
+    <td>Dec 1 2016</td>
+    <td>Summer Internships in New York and Washington Dc </td>
+		
+  </tr>	
 	<tr> 
  
 	  <td><a href="http://datasociety.net/initiatives/fellows-program/"> Data Society</a></td>
