--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -94,6 +94,13 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Summer Internship</td>
 
   </tr>
+	<tr> 
+  
+    <td><a href="https://www.buzzfeed.com/about/jobs"> BuzzFeed News </a></td>
+    <td>Rolling</td>
+    <td>Jobs and Internship positions</td>
+
+  </tr>
   <tr> 
    
     <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/newsroom-summer-internships/#1"> The New York Times</a></td>
