--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -103,7 +103,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
   <tr> 
    
-    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/newsroom-summer-internships/#1"> The New York Times</a></td>
+    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/"> The New York Times</a></td>
     <td>Oct 31 2016</td>
     <td>Summer Internship</td>
    
