--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -65,9 +65,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
     
-    <td><iframe src="https://newslab.withgoogle.com/"
-        width="100%" height="500" frameborder="0"
-        allowfullscreen sandbox><a href="https://newslab.withgoogle.com/"> Google News Lab Fellowships </a></iframe></td>
+    <td><a href="https://newslab.withgoogle.com/"> Google News Lab Fellowships </a></td>
     <td>Not specified yet</td>
     <td>Summer Internship Program</td>
   
