--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -65,7 +65,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
     
-    <td><a href="https://newslab.withgoogle.com/"> Google News Lab Fellowships </a></td>
+    <td><a href="https://newslab.withgoogle.com"> Google News Lab Fellowships </a></td>
     <td>Not specified yet</td>
     <td>Summer Internship Program</td>
   
@@ -103,14 +103,14 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
   <tr> 
    
-    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/"> The New York Times</a></td>
+    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships"> The New York Times</a></td>
     <td>Oct 31 2016</td>
     <td>Summer Internship</td>
    
   </tr>
 	<tr> 
    
-    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/newsroom-summer-internships/#1"> The New York Times James Reston Reporting Fellowships</a></td>
+    <td><a href="http://www.nytco.com/careers/newsroom-summer-internships/newsroom-summer-internships"> The New York Times James Reston Reporting Fellowships</a></td>
     <td>Oct 31 2016</td>
     <td>Interns are assigned to various news departments, typically Metro, Business, Sports or Science or the Washington bureau.</td>
    
