--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -65,7 +65,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
     
-    <td><a href="https://newslab.withgoogle.com"> Google News Lab Fellowships </a></td>
+    <td><a name="anchorlink1"></a><a href="https://newslab.withgoogle.com#anchorlink1"> Google News Lab Fellowships </a></td>
     <td>Not specified yet</td>
     <td>Summer Internship Program</td>
   
