--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -317,6 +317,22 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Summer internship </td>
 		
   </tr>
+	<tr> 
+ 
+	  <td><a href="http://www.advancelocal.net/careers/internship-program/"> Advance Local </a></td>
+    <td>Jan 31 2017 2016</td>
+    <td>Summer internship program across PA Media Group
+Masslive
+MLive Media Group
+Advance Ohio
+NOLA Media Group
+Alabama Media Group
+Oregonian Media Group
+NJ Advance Media
+Syracuse Media Group
+Staten Island Media Group </td>
+		
+  </tr>
 	
 	
 	<tr> 
