--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -245,17 +245,24 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>	
 	
 	<tr> 
+  </tr>	
  
 	  <td><a href="http://thomsonreuters.com/en/careers/recent-graduates-interns/recent-graduates-business-finance.html">Reuters Global Journalism Fellowship</a></td>
     <td>Nov 15 2016</td>
     <td>Opportunities in New York, London, Asia </td>
 		
-  </tr>	
 <tr> 
  
 	  <td><a href="http://www.orlandosentinel.com/orl-internships-story.html">Orlando Sun-Sentinel</a></td>
     <td>Nov 30 2016</td>
     <td>Summer Internship </td>
+		
+  </tr>	
+	<tr> 
+ 
+	  <td><a href="https://www.wired.com/about/jobs-magazine-fellowships">Wired Fellowships</a></td>
+    <td>Deadline to be posted in November</td>
+    <td>Editorial Fellowships</td>
 		
   </tr>	
 	<tr> 
@@ -320,7 +327,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
 	<tr> 
  
 	  <td><a href="http://www.advancelocal.net/careers/internship-program/"> Advance Local </a></td>
-    <td>Jan 31 2017 2016</td>
+    <td>Jan 31 2017 </td>
     <td>Summer internship program across PA Media Group
 Masslive
 MLive Media Group
