--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -326,6 +326,14 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
  
+	  <td><a href="https://newslab.withgoogle.com/fellowship"> Google News Lab </a></td>
+    <td>Not specified</td>
+    <td>Summer internship </td>
+		
+  </tr>
+	
+	<tr> 
+ 
 	  <td><a href="http://www.advancelocal.net/careers/internship-program/"> Advance Local </a></td>
     <td>Jan 31 2017 </td>
     <td>Summer internship program across PA Media Group
