--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -326,7 +326,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
  
-	  <td><a href="https://newslab.withgoogle.com/fellowship"> Google News Lab </a></td>
+	  <td><a href="https://medium.com/google-news-lab"> Google News Lab </a></td>
     <td>Not specified</td>
     <td>Summer internship </td>
 		
