--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -324,11 +324,11 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
     <td>Summer internship </td>
 		
   </tr>
-	<tr> 
+<tr> 
  
-	  <td><a href="https://medium.com/google-news-lab"> Google News Lab </a></td>
-    <td>Not specified</td>
-    <td>Summer internship </td>
+	  <td><a href="https://www.thebalance.com/the-new-york-times-internship-programs-1986932"> The New York Times</a></td>
+    <td>October 21 2016</td>
+    <td>Summer, Audio, Video, Data, Design Fellowships </td>
 		
   </tr>
 	
