--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -162,6 +162,13 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
  
+	  <td><a href="http://www.metrotimes.com/detroit/EditorialInternshipFAQs/Page#"> Detroit Metro Times</a></td>
+    <td>Nov 30 2016</td>
+    <td>Winter and Spring Internships</td>
+   
+  </tr>
+	<tr> 
+ 
 	  <td><a href="http://www.mcgrawcenter.org/the-harold-w-mcgraw-jr-business-journalism-fellowships/"> The McGraw Center For Business Journalism</a></td>
     <td>Dec 15 2016</td>
     <td>Fall Internship</td>
