--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -162,6 +162,13 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
  
+	  <td><a href="https://www.journalismjobs.com/job-listings/1633745"> The Virginian-Pilot</a></td>
+    <td>Nov 21 2016</td>
+    <td>Summer Internships</td>
+   
+  </tr>
+	<tr> 
+ 
 	  <td><a href="http://www.metrotimes.com/detroit/EditorialInternshipFAQs/Page#"> Detroit Metro Times</a></td>
     <td>Nov 30 2016</td>
     <td>Winter and Spring Internships</td>
