--- a/seachabletable/TableFilter_1.6_EN.htm
+++ b/seachabletable/TableFilter_1.6_EN.htm
@@ -58,7 +58,7 @@ td{ padding:2px; border-bottom:1px solid #ccc; border-right:1px solid #ccc; font
   </tr>
 	<tr> 
     
-    <td><a href="http://www.ap.org/company/careers/news-internship"> AP Global News Intnership </a></td>
+    <td><a href="http://www.ap.org/company/careers/news-internship"> AP Global News Internship </a></td>
     <td>Not specified yet</td>
     <td>Summer Internship Program</td>
   
